# sitraved

./: .flake8  .gitignore  Dockerfile  LICENSE  Procfile  README.md  django.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: django.yml  python-app.yml
conf/: asgi.py  urls.py  wsgi.py
conf/settings/: base.py  local.py  testing.py
my_project/apps/auth/models/: user.py
sitraved/apps/media_api/: admin.py  apps.py  urls.py
sitraved/apps/media_api/clients/: TMDB_client.py
sitraved/apps/media_api/migrations/: 0001_initial.py  0002_auto_20210419_2219.py  0003_remove_movie_raw_genres.py  0004_auto_20210420_2147.py  0005_auto_20210420_2152.py  0006_auto_20210420_2208.py  0007_auto_20210421_2140.py
sitraved/apps/media_api/models/: __init__.py  crew_member.py  language.py  movie.py  movie_crew_member.py  movie_genre.py
sitraved/apps/media_api/serializers/: crew_member_serializer.py  language_serializer.py  movie_genre_serializer.py  movie_serializer.py
sitraved/apps/media_api/strategies/: search_movies_strategy.py  search_single_movie_strategy.py  search_tv_series_strategy.py  strategy.py
sitraved/apps/media_api/tests/: test_media_to_model_creator.py  test_search_movies_api.py  test_tmdb_client.py
sitraved/apps/media_api/utils/: MediaToModelCreator.py
sitraved/apps/media_api/views/: search_movies_views.py
sitraved/apps/recommendations/: admin.py  apps.py  urls.py
sitraved/apps/recommendations/migrations/: 0001_initial.py  (+1 more)
sitraved/apps/users/: admin.py  apps.py  urls.py  utils.py
(+32 files in other folders)
